--- a/app/contact/contact.css
+++ b/app/contact/contact.css
@@ -12,13 +12,20 @@ main.contact-container {
   padding: 20px;
 }
 
+.contact-title {
+  font-size: 1.8rem;
+  color: #2c3e50;
+  font-weight: 700;
+  text-align: center;
+}
+
 /* Card styling */
 .address-card {
   background: #ffffff;
-  padding: 30px 40px;
+  padding: 0px 40px 40px;
   border-radius: 12px;
-  width: 100%;
-  max-width: 450px;
+  width: 80%;
+  max-width: 350px;
   text-align: left;
   box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);
   border: 0.5px solid #e8e8e8;
@@ -33,7 +40,6 @@ main.contact-container {
   align-items: center; /* centers icons vertically */
   gap: 10px; /* evenly space icon and text */
   color: #444;
-  flex-wrap: wrap;
   line-height: 1.6;
   
 }
@@ -65,6 +71,11 @@ main.contact-container {
 
   .address-card p {
     font-size: 0.95rem;
+  }
+
+  .contact-title {
+    font-size: 1.3rem;
+    font-weight: 500;
   }
 
   .icon {
