--- a/app/epay-deregister/Epay.css
+++ b/app/epay-deregister/Epay.css
@@ -116,14 +116,14 @@
   left: 12px;
   top: 50%;
   transform: translateY(-50%);
-  color: rgb(58, 179, 58);
+  color: #00a86b;
   font-size: 1.2rem;
   pointer-events: none;
 }
 
 /* ================= BUTTON ================= */
 .raise-complaint-main .submit-btn {
-  background-color: #0d6efd;
+  background-color: #00a86b;
   color: white;
   padding: 12px 35px;
   border-radius: 6px;
@@ -135,7 +135,7 @@
 }
 
 .raise-complaint-main .submit-btn:hover {
-  background-color: #0b5ed7;
+  background-color: #007a4e;
 }
 
 /* ================= RESPONSIVE ================= */
